v0.6/docs/grammar.ebnf
# AxiomFusion v0.3 — simplified EBNF (v0.2 + v0.3)

file           := { decl } ;

decl           := input_decl
               | let_decl
               | signal_decl
               | state_decl
               | on_bar_block
               | on_tick_block
               ;

input_decl     := "input" IDENT ":" type "=" expr ;
let_decl       := "let" IDENT "=" expr ;
signal_decl    := "signal" IDENT "=" expr ;

state_decl     := "state" IDENT "v" INT "{" { state_field } "}" ;
state_field    := IDENT ":" scalar_type "=" expr ;

on_bar_block   := "on" "bar" block ;
on_tick_block  := "on" "tick" block ;

block          := "{" { stmt } "}" ;

stmt           := if_stmt
               | call_stmt
               | set_stmt
               | reduce_stmt
               ;

if_stmt        := "if" expr block ;
call_stmt      := call ;
set_stmt       := "set" lvalue "=" expr ;
reduce_stmt    := "reduce" lvalue "=" expr "using" reduce_op ;

lvalue         := IDENT "." IDENT ;

reduce_op      := "sum" | "min" | "max" | "last" ;

expr           := logic_or ;
logic_or       := logic_and { "or" logic_and } ;
logic_and      := equality { "and" equality } ;
equality       := compare { ("==" | "!=") compare } ;
compare        := term { ("<" | "<=" | ">" | ">=") term } ;
term           := factor { ("+" | "-") factor } ;
factor         := unary { ("*" | "/" ) unary } ;
unary          := ("not" | "-" ) unary | postfix ;

postfix        := primary { member | index | call_suffix } ;
member         := "." IDENT ;
index          := "[" ( "-" INT ) "]" ;          # history access only; must be negative
call_suffix    := "(" [ args ] ")" ;

args           := arg { "," arg } ;
arg            := ( IDENT "=" expr ) | expr ;

primary        := NUMBER | STRING | "true" | "false" | IDENT ;

type           := scalar_type | "series" "<" scalar_type ">" ;
scalar_type    := "bool" | "int" | "float" | "string" ;
